<resources>
    <string name="app_name">Digikala</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="problem_connect_to_internet">خطا در اتصال به اینترنت!</string>
    <string name="check_network_setting">بررسی تنظیمات شبکه</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="home">خانه</string>
    <string name="category_list">لیست دسته‌بندی محصولات</string>
    <string name="basket">سبد خرید</string>
    <string name="most_visiting">پربازدیدترین‌ها</string>
    <string name="most_rating">پرامتیازترین‌ها</string>
    <string name="most_newest">جدیدترین‌ها</string>
    <string name="full_list">لیست کامل</string>
    <string name="users_comment">نظرات کاربران</string>
    <string name="garantee_text">گارانتی اصالت و سلامت فیزیکی کالا</string>
    <string name="sale_digikala">فروش توسط دیجی‌کالا</string>
    <string name="price_sample">260000 تومان</string>
    <string name="add_to_basket">افزودن به سبد خرید</string>
    <string name="related_product">محصولات مشابه</string>
    <string name="your_basket">سبد خرید شما</string>
    <string name="sum_of_basket">جمع کل خرید</string>
    <string name="finalize_basket">خرید خود را نهایی کنید</string>
    <string name="garantee">گارانتی:</string>
    <string name="digikala_txt">دیجی‌کالا</string>
    <string name="saler">فروشنده:</string>
    <string name="count">تعداد:</string>
    <string name="price">قیمت کل</string>
    <string name="amazing_suggetstion_price">(-) تخفیف شگفت‌انگیز</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="delete">حذف</string>
    <string name="do_you_want_delete_product_from_basket">آیا مایل به حذف این محصول از سبد خرید هستید؟</string>
    <string name="do_you_want_delete_product_from_favorite">آیا مایل به حذف این محصول از لیست مورد علاقه هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="empty_basket">سبد خرید شما خالی است!</string>
    <string name="share_via">اشتراک گذاری با</string>
    <string name="favorite_list_txt">لیست محصولات مورد علاقه</string>
    <string name="no_favorite_product">شما محصول مورد علاقه‌ای ندارید!</string>
    <string name="product_category">دسته بندی محصولات</string>
    <string name="comment_users">نظرات کاربران</string>
    <string name="no_comment">هیچ نظری برای این محصول ثبت نشده است!</string>
    <string name="filter_txt">فیلتر کردن</string>
    <string name="example_filter">رنگ، نوع، قیمت و ...</string>
    <string name="sort_txt">مرتب سازی</string>
    <string name="empty_product_list">لیست محصولات خالی است!</string>
    <string name="image_transaction">product_img_basktet</string>
    <string name="search_in_digikala">جست و جو در دیجی‌کالا...</string>
    <string name="tell_name_your_product">نام کالای مورد نظر خود را بگویید...</string>
    <string name="price_desc">قیمت از زیاد به کم</string>
    <string name="price_asc">قیمت از کم به زیاد</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="show_password">نمایش کلمه عبور</string>
    <string name="register_digikala"><u>ثبت نام در دیجی‌کالا</u></string>
    <string name="login_to_digikala">ورود به دیجی‌کالا</string>
    <string name="register">ثبت نام</string>
    <string name="username_txt">نام کاربری</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="wrong_email">لطفا ایمیل خود را به صورت صحیح وارد کنید</string>
    <string name="wrong_password">طول رمز عبور باید بیشتر از 6 کاراکتر باشد</string>
    <string name="fill_all_field">لطفا تمامی فیلد ها را پر کنید</string>
    <string name="register_successfull">ثبت نام با موفقیت انجام شد</string>
    <string name="repeat_email">ایمیل یا نام کاربری تکراری است!</string>
    <string name="problem_occur">خطایی پیش آمده</string>
    <string name="fix_email">ایمیل خود را به درستی وارد کنید!</string>
    <string name="login_successfull">با موفقیت وارد شدید</string>
    <string name="profile">پروفایل</string>
    <string name="edit_info">ویرایش اطلاعات</string>
    <string name="my_orders">سفارشات من</string>
    <string name="log_out">خروج</string>
    <string name="edit_customer">ویرایش اطلاعات کاربری</string>
    <string name="enter_customer_info">لطفا اطلاعات کاربری خود را وارد کنید</string>
    <string name="register_data">ثبت اطلاعات</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="update_successfully">اطلاعات با موفقیت به‌روز‌رسانی شد</string>
    <string name="postal_code">کد پستی</string>
    <string name="post_address">نشانی پستی</string>
    <string name="title_address">عنوان آدرس</string>
    <string name="generated_address_by_map">نشانی تولید شده توسط نقشه</string>
    <string name="register_address">ثبت نشانی</string>
    <string name="my_address">آدرس من</string>
    <string name="_continue">ادامه</string>
    <string name="choose_location">لطفا یک موقعیت انتخاب کنید</string>
    <string name="select_location">لطفا موقعیت خود را از نقشه انتخاب کنید</string>
    <string name="select_customer_address">لطفا نشانی خود را وارد کنید</string>
    <string name="your_review">نظر شما</string>
    <string name="register_comment">ثبت نظر</string>
    <string name="want_delete_comment">آیا مایل به حذف این نظر هستید؟</string>
    <string name="delete_your_comment">کامنت مورد نظر پاک شد</string>
    <string name="cant_delete_comment">متاسفانه کامنت شما پاک نشد!</string>
    <string name="_filter">فیلترکن</string>
    <string name="filter_product">فیلترکردن محصول</string>
    <string name="send_order">ارسال سفارش</string>
    <string name="products">محصولات</string>
    <string name="description_order">توضیحات سفارش</string>
    <string name="register_order">ثبت نهایی سفارش</string>
    <string name="customer_address">آدرس مشتری</string>
    <string name="order_history">سوابق سفارش</string>
    <string name="no_product_ordered">هیچ محصولی سفارش نداده اید</string>
    <string name="login_first">لطفا ابتدا لاگین کنین</string>
    <string name="enter_coupons">کوپن خود را وارد کنید</string>
    <string name="register_coupons">ثبت</string>
    <string name="publish_comment">کامنت شما منتشر شد</string>
    <string name="cant_update_comment">متاسفانه کامنت شما به روز رسانی نشد</string>
    <string name="update_comment">کامنت شما به روز رسانی شد</string>
    <string name="verify_comment">کد تخفیف شما تایید شد</string>
    <string name="cant_verify_comment">کد تخفیف شما مورد تایید نیست</string>
    <string name="enter_coupon">لطفا کد تخفیف را وارد کنید</string>
    <string name="enter_copon">لطفا کوپن خود را وارد کنید</string>
    <string name="setting">تنظیمات</string>
    <string name="product_notification">اعلان محصولات</string>
    <string name="choice_product_notif">زمان اعلان محصولات جدید را انتخاب کنید</string>
    <string name="channel_name">Newest Products</string>
    <string name="channel_description">Receiving newest products from this Channel</string>
    <string name="new_product">محصول جدید</string>
    <string name="none">هیچ کدام</string>
    <string name="every_15_min">هر 15 دقیقه</string>
    <string name="every_3_hours">هر 3 ساعت</string>
    <string name="every_5_hours">هر 5 ساعت</string>
    <string name="every_8_hours">هر 8 ساعت</string>
    <string name="every_12_hours">هر 12 ساعت</string>
    <string name="register_norif">ثبت</string>
    <string name="enter_your_time_for_notif">زمان دلخواه خود را به ساعت وارد کنید</string>
    <string name="choose_your_time">زمان دلخواه خود را انتخاب کنید</string>
    <string name="hint_custom_notif">به ساعت وارد کنید مثال: 1</string>
    <string name="no_address">هیچ آدرسی وجود ندارد</string>
</resources>
