<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/product_img"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_alignParentEnd="true"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:orientation="vertical"
            android:layout_alignTop="@id/product_img"
            android:layout_toStartOf="@id/product_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="end"
                android:id="@+id/title_product"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="end"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="end"
                android:id="@+id/short_description_product"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginEnd="8dp"
                    android:text="@string/garantee_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:text="@string/garantee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginEnd="8dp"
                    android:text="@string/digikala_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:text="@string/saler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/product_count_txt"
                    android:layout_marginEnd="8dp"
                    android:text="@string/digikala_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:text="@string/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_marginTop="16dp"
            android:background="@color/cardViewBackground"
            android:layout_below="@id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/seperator2"
                android:src="@color/strokeCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
            <TextView
                android:padding="8dp"
                android:layout_alignParentEnd="true"
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/price"
                android:text="@string/price_sample"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/amazing_suggestion_txt"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:layout_below="@id/price"
                android:text="@string/amazing_suggetstion_price"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/discount_price_txt"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"                    android:text="@string/price_sample"
                    android:layout_below="@id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginTop="16dp"
                android:layout_below="@id/discount_price_txt"
                android:id="@+id/seperator"
                android:src="@color/strokeCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />

            <TextView
                android:textColor="@color/priceColor"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/seperator"
                android:text="@string/final_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/priceColor"
                android:id="@+id/final_price"
                android:text="@string/price_sample"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"                android:layout_below="@id/seperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_below="@id/final_price"
                android:id="@+id/seperator3"
                android:src="@color/strokeCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_below="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/delete_product"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/delete"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>