<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.NoInternetConnectionActivity">
    
    <ImageView
        android:id="@+id/no_internet_logo"
        app:srcCompat="@drawable/ic_signal_wifi_off_black_24dp"
        android:layout_width="56dp"
        android:layout_height="56dp"/>
        <TextView
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/problem_connect_to_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:id="@+id/check_network_txt"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/grayText"
                android:layout_marginEnd="4dp"
                android:text="@string/check_network_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp" />
            <ImageView
                app:srcCompat="@drawable/ic_wifi_tethering_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    <Button
        android:id="@+id/try_again_btn"
        android:textSize="16sp"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/try_again"
        android:layout_marginTop="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    
</LinearLayout>